<resources>
    <string name="app_name">WhereToEat</string>
    <string name="app_title">Where to eat?</string>
    <string name="label_research_country">Select your country!</string>>
    <string name="label_selected_country">Selected country:</string>
    <string name="hint_titel_add">Add user</string>
    <string name="hint_add_name">Add your name! </string>
    <string name="hint_add_phone">Add your phone! </string>
    <string name="hint_add_address">Add your address! </string>
    <string name="hint_add_email">Add your e-mail! </string>
    <string name="hint_add_profile">Add your profile picture! </string>
    <string name="hint_button_add">ADD USER </string>
    <string name="hint_title_profile">Profile</string>
    <string name="hint_profile_name">Name</string>
    <string name="hint_profile_phone">Phone</string>
    <string name="hint_profile_address">Address</string>
    <string name="hint_profile_email">E-mail</string>
    <string name="label_research_profile">Select your profile!</string>
    <string name="label_favouritelist_profile">Your favourite restaurant list </string>
    <string name="button_update_profile"> UPDATE </string>
    <string name="title_update_profile"> Update profile </string>
    <string name="title_dialog">Who are you?</string>
    <string name="next">NEXT</string>
    <string name="pevious">PREVIOUS</string>>
</resources>