<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp">
                <TextView
                    android:id="@+id/TextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="26dp"
                    android:hint="@string/hint_titel_add"
                    android:gravity="center"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">
                <EditText
                    android:id="@+id/EditTextRestaurantNameAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:hint="@string/hint_add_name"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:drawablePadding="18dp"
                    android:drawableStart="@drawable/user"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">
                <EditText
                    android:id="@+id/EditTextPhoneAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:hint="@string/hint_add_phone"
                    android:textSize="20sp"
                    android:drawablePadding="18dp"
                    android:drawableStart="@drawable/telephone"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">
                <EditText
                    android:id="@+id/EditTextAdressAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:hint="@string/hint_add_address"
                    android:textSize="20sp"
                    android:drawablePadding="18dp"
                    android:drawableStart="@drawable/area"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">
                <ImageView
                    android:id="@+id/imageViewProfileAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativeLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <Button
                    android:id="@+id/buttonProfileAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:hint="@string/hint_add_profile"
                    android:textSize="20sp"
                    android:drawablePadding="18dp"
                    app:backgroundTint="#908F93"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativeLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">
                <EditText
                    android:id="@+id/EditTextAdressEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:hint="@string/hint_add_email"
                    android:textSize="20sp"
                    android:drawablePadding="18dp"
                    android:drawableStart="@drawable/email"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/ButtonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_button_add"
                    app:backgroundTint="#908F93" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>